force-app/main/default/objects/GitHub_AI_Fix_Config__mdt/GitHub_AI_Fix_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores GitHub connection configuration for the AI Fix automation pipeline.</description>
    <label>GitHub AI Fix Config</label>
    <pluralLabel>GitHub AI Fix Configs</pluralLabel>
</CustomObject>