force-app/main/default/objects/GitHub_AI_Fix_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>Kill switch for the GitHub AI Fix integration. Set to false to disable all callouts.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>