force-app/main/default/objects/GitHub_AI_Fix_Config__mdt/fields/GitHub_Token__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Token__c</fullName>
    <description>Personal Access Token (PAT) for GitHub API authentication.</description>
    <label>GitHub Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>