force-app/main/default/objects/GitHub_AI_Fix_Config__mdt/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <description>Name of the target GitHub repository (e.g. SB-POC).</description>
    <label>Repository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>