force-app/main/default/objects/GitHub_AI_Fix_Config__mdt/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <description>GitHub username or organisation that owns the target repository (e.g. McForce).</description>
    <label>Repository Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>